--- a/holidaze/src/components/Nav/Nav.module.css
+++ b/holidaze/src/components/Nav/Nav.module.css
@@ -4,15 +4,11 @@
     justify-content: space-between;
     align-items: center;
     margin: 25px 10px 0 10px;
-}
-
-.menuContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    width: 1200px;
 }
 
 .menuItem {
     margin: 0 0 0 10px;
+    font-size: calc(1.5rem + 0.5vw);
 }
 
