--- a/holidaze/src/pages/Home/Home.module.css
+++ b/holidaze/src/pages/Home/Home.module.css
@@ -18,7 +18,7 @@
 
 .card {
     border-radius: 10px;
-    box-shadow: 0 0 8px #ddd;
+    box-shadow: 0px 0px 6px #ddd;
     padding: 6px;
 }
 
@@ -58,5 +58,6 @@ img {
     padding: 10px;
     color: white;
     text-decoration: none;
+    font-weight: bold;
     border-radius: 10px;
 }
