--- a/holidaze/src/pages/Home/Home.module.css
+++ b/holidaze/src/pages/Home/Home.module.css
@@ -8,6 +8,13 @@
     margin: 25px 10px 0 10px;
 }
 
+.headingContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
