--- a/holidaze/src/components/Booking/Booking.module.css
+++ b/holidaze/src/components/Booking/Booking.module.css
@@ -1,31 +1,34 @@
+.availabilityAndBookingContainer {
+    display: flex;
+    flex-direction: column;
+    width: 243px;
+}
+
 .calendarContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     max-width: 243px;
-}
-
-
-.guestAndSubmitButtonContainer {
-    display: flex;
-    flex-direction: row;
+    margin: 0 auto;
 }
 
 .numberOfGuestsContainer {
-    margin-top: 20px;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    width: 50%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 243px;
+    padding: 30px 0;
 }
 
-
 .numberOfGuestsContainer input {
-    margin-top: 20px;
-    width: 50%;
+    width: 50px;
 }
 
 .bookingButton {
-    margin-top: 20px;
-    width: 50%;
+    margin: 20px 0;
+    width: 100%;
+
 }
 
