--- a/holidaze/src/pages/Profile/Profile.module.css
+++ b/holidaze/src/pages/Profile/Profile.module.css
@@ -9,6 +9,10 @@
     padding: 0 10px 0 10px;
 }
 
+.headingContainer {
+    margin-left: 20px;
+}
+
 .profileHeading {
     margin: 30px 0 10px 20px;
     color: black;
@@ -31,8 +35,8 @@
 .profileButtonContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 20px 0 10px 0;
+    justify-content: space-between;
+    margin: 20px 0 20px 0;
 }
 
 .createVenueButton {
