--- a/holidaze/src/pages/CreateVenue/CreateVenue.module.css
+++ b/holidaze/src/pages/CreateVenue/CreateVenue.module.css
@@ -52,3 +52,22 @@ textarea {
     align-items: center;
     gap: 10px;
 }
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.createVenueButton {
+    margin-top: 30px;
+    width: 200px;
+}
+
+.cancelEditProfileButton {
+    background-color: transparent;
+    border: 2px solid var(--alert-color);
+    color: black;
+    font-weight: bold;
+    width: 200px;
+}
