--- a/holidaze/src/pages/EditVenue/EditVenue.module.css
+++ b/holidaze/src/pages/EditVenue/EditVenue.module.css
@@ -17,7 +17,7 @@
     position:relative;
     display: flex;
     flex-direction: column;
-    margin: 30px 0 10px 0;
+    margin: 40px 0 10px 0;
 }
 
 .errorMessage {
@@ -44,6 +44,12 @@ textarea {
     flex-direction: row;
     gap: 10px;
     align-items: end;
+}
+
+.checkboxContainersContainer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
 }
 
 .checkboxContainer {
