--- a/holidaze/src/pages/Venue/Venue.module.css
+++ b/holidaze/src/pages/Venue/Venue.module.css
@@ -4,6 +4,19 @@
     padding: 0 20px;
 }
 
+.loadingMessage {
+    margin: 0 auto;
+    padding-top: 100px;
+    font-weight: bold;
+}
+
+.errorMessage {
+    margin: 0 auto;
+    padding-top: 100px;
+    color: var(--alert-color);
+    font-weight: bold;
+}
+
 .venueContent {
   width: 100%;
   margin: 0 auto;
