--- a/holidaze/src/pages/Profile/Profile.module.css
+++ b/holidaze/src/pages/Profile/Profile.module.css
@@ -3,6 +3,12 @@
     margin: 0 auto;
 }
 
+.loginLink {
+    margin: 0 auto;
+    padding-top: 100px;
+    font-weight: bold;
+}
+
 .loadingMessage {
     margin: 0 auto;
     padding-top: 100px;
